--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pushpender Rao | Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/png" href="https://yt3.googleusercontent.com/vVV3JKa-rja0qnQ0CNjbU8QuhFtstNfzAVoFH9ki4Q9Hl4TwyEGhgFoN8KbumUv8MqdMNma5sw=s160-c-k-c0x00ffffff-no-rj">
   <style>
     :root {
       --navy: #030e20;
