--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     }
 
     header {
-      padding: 2rem;
+      padding: 1rem;
       text-align: center;
       background: #0006108a;
       color: white;
@@ -157,6 +157,109 @@
       color: var(--accent-blue);
       margin-right: 0.5rem;
     }
+    
+  .header-content {
+    margin-top: 0.5rem;
+    display: flex;
+    justify-content: center;
+    gap: 3rem; /* Increased spacing between sections */
+    flex-wrap: wrap;
+    margin-bottom: 0.5rem;
+    color: #e0e0e0;
+    text-decoration: none;
+    transition: color 0.3s;
+    font-size: 0.95rem;
+    min-width: 100px; /* Ensures even narrow sections stay clean */
+  }
+
+  .header-content a {
+    text-decoration: none;
+    color: #e0e0e0;
+    font-weight: 500;
+    transition: color 0.3s, transform 0.3s;
+    padding: 0.25rem 0.5rem;
+    border-radius: 5px;
+  }
+
+  .header-content a:hover {
+    color: var(--accent-blue);
+    background-color: rgba(255, 255, 255, 0.05);
+    transform: translateY(-2px);
+  }
+
+  body.dark-mode .header-content a {
+    color: #cccccc;
+  }
+
+  body.dark-mode .header-content a:hover {
+    color: var(--accent-blue);
+  }
+
+    footer {
+  padding: 2rem 1rem 1rem;
+  text-align: center;
+  background: #0006108a;
+  backdrop-filter: blur(8px);
+  -webkit-backdrop-filter: blur(10px);
+  border-top: 2px solid #0b00001a;
+  box-shadow: 0 -4px 20px rgba(0, 0, 0, 0.852);
+  color: white;
+  margin-top: 3rem;
+}
+
+  .footer-content {
+    display: flex;
+    justify-content: center;
+    gap: 20rem; /* Increased spacing between sections */
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+  }
+
+  .footer-section {
+    text-align: left; /* Align text to the left */
+    min-width: 100px; /* Ensures even narrow sections stay clean */
+  }
+
+  .footer-section h3 {
+    margin-bottom: 0.8rem;
+    font-size: 1rem;
+    color: var(--accent-blue);
+  }
+
+  .footer-section a {
+    display: block;
+    color: #e0e0e0;
+    text-decoration: none;
+    margin: 0.5rem 0; /* Increased space between links */
+    transition: color 0.3s;
+    font-size: 0.95rem;
+  }
+
+  .footer-section a:hover {
+    color: var(--accent-blue);
+  }
+
+  .footer-note {
+    font-size: 0.85rem;
+    color: #c0c0c0;
+  }
+
+  /* Dark Mode Footer */
+  body.dark-mode footer {
+   background: #000308ce;
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(10px);
+    border-top: 2px solid #ffffff1a;
+    box-shadow: 0 -4px 20px #1f2b3a;
+  }
+
+  body.dark-mode .footer-section a {
+    color: #cccccc;
+  }
+
+  body.dark-mode .footer-section a:hover {
+    color: var(--accent-blue);
+  }
   </style>
 </head>
 <body>
@@ -166,6 +269,10 @@
   <header>
     <h1>Pushpender Rao</h1>
     <p>“Aspiring Software Engineer | Tech Enthusiast | Creative Designer”</p>
+    <div class="header-content">
+    <a href="index.html">Home</a>
+    <a href="contact.html">Contact</a>
+    </div>
   </header>
 
   <section class="hero">
@@ -228,7 +335,7 @@
         <p>A responsive website built using HTML and CSS to showcase my skills, interests, and journey.</p>
       </div>
       <div class="card">
-        <h3>Graphic Designs</h3>
+        <h3><a href="https://noisy-turnip-9a5.notion.site/Pushpender-Rao-Portfolio-Services-1b60164a601880f9b9cddd0dda18182b">Graphics Designs</a></h3>
         <p>Designed posters, infographics, and social media creatives using Canva and Photoshop.</p>
       </div>
     </div>
@@ -267,20 +374,59 @@
   </section>
 
   <script>
-    function toggleDarkMode() {
-      const body = document.body;
-      const icon = document.getElementById("mode-icon");
-  
-      body.classList.toggle("dark-mode");
-  
-      if (body.classList.contains("dark-mode")) {
-        icon.src = "https://img.icons8.com/ios-glyphs/30/sun--v1.png";
-        icon.alt = "Light Mode";
-      } else {
-        icon.src = "https://img.icons8.com/ios-glyphs/30/moon-symbol.png";
-        icon.alt = "Dark Mode";
-      }
+  // Apply saved theme on load
+  document.addEventListener('DOMContentLoaded', function() {
+    const savedTheme = localStorage.getItem('theme');
+    const body = document.body;
+    const icon = document.getElementById("mode-icon");
+
+    if (savedTheme === 'dark') {
+      body.classList.add('dark-mode');
+      icon.src = "https://img.icons8.com/ios-glyphs/30/sun--v1.png";
+      icon.alt = "Light Mode";
+    } else {
+      body.classList.remove('dark-mode');
+      icon.src = "https://img.icons8.com/ios-glyphs/30/moon-symbol.png";
+      icon.alt = "Dark Mode";
     }
+  });
+
+  // Toggle theme and save preference
+  function toggleDarkMode() {
+    const body = document.body;
+    const icon = document.getElementById("mode-icon");
+
+    body.classList.toggle('dark-mode');
+
+    if (body.classList.contains('dark-mode')) {
+      icon.src = "https://img.icons8.com/ios-glyphs/30/sun--v1.png";
+      icon.alt = "Light Mode";
+      localStorage.setItem('theme', 'dark');
+    } else {
+      icon.src = "https://img.icons8.com/ios-glyphs/30/moon-symbol.png";
+      icon.alt = "Dark Mode";
+      localStorage.setItem('theme', 'light');
+    }
+  }
   </script>
+  <footer>
+    <div class="footer-content">
+      <div class="footer-section">
+        <h3>Main</h3>
+        <a href="index.html">Home</a>
+        <a href="contact.html">Contact</a>
+      </div>
+      <div class="footer-section">
+        <h3>Social</h3>
+        <a href="mailto:pushpenderrao31@gmail.com">Email</a>
+        <a href="https://linkedin.com/in/pushpender84" target="_blank">LinkedIn</a>
+        <a href="https://github.com/pushpenderrao84" target="_blank">GitHub</a>
+        <a href="https://x.com/pushpenderrao84/" target="_blank">Twitter (X)</a>
+        <a href="https://www.youtube.com/@pushpenderrao84" target="_blank">YouTube</a>
+        <a href="https://www.instagram.com/prao.84/" target="_blank">Instagram</a>
+      </div>
+    </div>
+    <p class="footer-note">Made with ❤️ by Pushpender Rao</p>
+  </footer>  
 </body>
 </html>
