--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
             <textarea name="message" placeholder="Your Message" required></textarea>
           
             <!-- Hidden Fields -->
-            <input type="hidden" name="_next" value="thanks.html"> <!-- Redirect after submit -->
+            <input type="hidden" name="_next" value="contact.html"> <!-- Redirect after submit -->
           
             <!-- Submit Button -->
             <button type="submit">Send</button>
