--- a/contact.html
+++ b/contact.html
@@ -318,6 +318,7 @@
           
             <!-- Hidden Fields -->
             <input type="hidden" name="_next" value="contact.html"> <!-- Redirect after submit -->
+            <input type="hidden" name="_captcha" value="false">   <!-- Disable captcha -->
           
             <!-- Submit Button -->
             <button type="submit">Send</button>
