--- a/contact.html
+++ b/contact.html
@@ -317,7 +317,7 @@
             <textarea name="message" placeholder="Your Message" required></textarea>
 
             <!-- Hidden Fields -->
-            <input type="hidden" name="_next" value="https://pushpenderrao84.github.io/Portfolio/contact.html?success=true"> <!-- Redirect after submit -->
+            <input type="hidden" name="_next" value="https://formsubmit.co/contact.html?success=true"> <!-- Redirect after submit -->
             <input type="hidden" name="_captcha" value="false">   <!-- Disable captcha -->
           
             <!-- Submit Button -->
