--- a/contact.html
+++ b/contact.html
@@ -318,7 +318,7 @@
 
             <!-- Hidden Fields -->
             <input type="hidden" name="_next" value="https://formsubmit.co/contact.html?success=true"> <!-- Redirect after submit -->
-            <input type="hidden" name="_captcha" value="false">   <!-- Disable captcha -->
+            <input type="hidden" name="_captcha" value="true">   <!-- Disable captcha -->
           
             <!-- Submit Button -->
             <button type="submit">Send</button>
