--- a/contact.html
+++ b/contact.html
@@ -274,7 +274,7 @@
   <h2>Contact Me</h2>
   <div class="card">
     <p>If you'd like to collaborate, chat about tech, or just say hello — feel free to reach out using the form below or connect with me directly through email or social media.</p>
-    <form action="https://formsubmit.co/pushpenderrao31@gmail.com" method="POST">
+    <form action="https://formsubmit.co/pushpenderrao31@gmail.com" method="POST"  data-redirect="https://pushpenderrao84.github.io/Portfolio/index.html">
             <!-- Visible Input Fields -->
             <input type="text" name="name" placeholder="Your Name" required>
             <input type="email" name="email" placeholder="Your Email" required>
